Echoed the small API change in cromlech.session. Renamed handler.py to store.py.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,6 @@ develop = .
 parts = test
 show-picked-versions = true
 extensions = mr.developer
-find-links = http://pypi.dolmen-project.org/find-links
 newest = false
 
 # mr.developer
@@ -23,4 +22,4 @@ recipe = zc.recipe.egg
 eggs =
     pytest
     cromlech.sessions.redis [test]
-arguments = ['src/cromlech']
+arguments = ['src']
